20220525 1.添加購物車(資料庫語法待更新，程式部分須更正)

--- a/OnlineShop/Pages/Index.cshtml
+++ b/OnlineShop/Pages/Index.cshtml
@@ -108,8 +108,7 @@
 
 <script src="~/js/Index.js"></script>
 
-<script id="getSelect">
+<script id="getProd">
     var ProdJson = "";
-    $("#getSelect").remove();
+    $("#getProd").remove();
 </script>
-<script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
