--- a/OnlineShop/Pages/car.cshtml
+++ b/OnlineShop/Pages/car.cshtml
@@ -3,12 +3,40 @@
 @{
 }
 
-<div>
-    <ul></ul>
+<div class="panel panel-primary">
+    <div class="panel panel-primary">
+        <table class="table table-bordered" id="Table">
+            <thead>
+                <tr>
+                    <th>商品ID</th>
+                    <th>商品圖片</th>
+                    <th>商品名稱</th>
+                    <th>商品金額</th>
+                    <th>商品庫存</th>
+                </tr>
+            </thead>
+            @*<tbody id="carTableBody">
+                <tr>
+                    <td>@Model.carID</td>
+                    <td>@Model.carImg</td>
+                    <td>@Model.carName</td>
+                    <td>@Model.carPrice</td>
+                    <td>@Model.carStock</td>
+                </tr>
+            </tbody>*@
+            <tbody id="carTableBody">
+            </tbody>
+        </table>
+    </div>
 </div>
 
+<script src="~/js/car.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
-<script>
+<script id="getCar">
+    var CarJson = "";
+    $("#getCar").remove();
+</script>
+@*<script>
     //若 Cookies 中沒有 carItem 這個 key ，提醒使用者快去買東西!!
     if (Cookies.get("carItem") == undefined) {
         let element = document.createElement("p");
@@ -25,4 +53,4 @@
             document.querySelector("ul").appendChild(element);
         }
     }
-</script>
+</script>*@
