20220526 1.更新ProductCar購物車頁面內容(有部分Bug代修正 ex.重複id)

--- a/OnlineShop/Pages/car.cshtml
+++ b/OnlineShop/Pages/car.cshtml
@@ -8,22 +8,13 @@
         <table class="table table-bordered" id="Table">
             <thead>
                 <tr>
-                    <th>商品ID</th>
+                    <th>商品代號</th>
                     <th>商品圖片</th>
                     <th>商品名稱</th>
                     <th>商品金額</th>
                     <th>商品庫存</th>
                 </tr>
             </thead>
-            @*<tbody id="carTableBody">
-                <tr>
-                    <td>@Model.carID</td>
-                    <td>@Model.carImg</td>
-                    <td>@Model.carName</td>
-                    <td>@Model.carPrice</td>
-                    <td>@Model.carStock</td>
-                </tr>
-            </tbody>*@
             <tbody id="carTableBody">
             </tbody>
         </table>
